# OI

./: .gitignore  CMakeLists.txt  CmakeLists.txt
APIO/2016/P3-Gap/: gap.cpp  grader.cpp
BOI/2005/: bus.cpp
BOI/2017/Day-2/: plusminus.cpp
BOI/2018/Day-1/: dna.cpp  worm.cpp
BOI/2018/Day-2/: paths.cpp
CEOI/2017/Day-1/: a.cpp  b.cpp  c.cpp
CEOI/2017/Day-2/: d.cpp  e.cpp  f.cpp
CEOI/2020/Day-1/: a.cpp
CEOI/2020/Day-2/: d.cpp
CEOI/2021/Day-1/: a.cpp  c.cpp
CEOI/2021/Day-2/: d.cpp
IOI/2008/P1-Type_Printer/: printer.cpp
IOI/2011/P2-Race/files/: grader.cpp  race.cpp  race.h
IOI/2011/P2-Race/tests/: 01  02  03  04
IOI/2013/P4-Cave/files/: cave.cpp  cave.h  grader.cpp
IOI/2013/P5-Robots/files/: grader.cpp  robots.cpp  robots.h
IOI/2014/P3-Game/files/: game.cpp  game.h  grader.cpp
IOI/2015/P1-Boxes/files/: boxes.cpp  grader.cpp
IOI/2016/P1-Detecting_Molecules/files/: grader.cpp  molecules.cpp
IOI/2018/Day-1/: combo.cpp
IOI/2018/P1-Combo/tests/: 01
IOI/2018/P2-Seats/files/: seats.cpp  seats.h
IOI/2018/P2-Seats/tests/: 01  02
IOI/2018/P3-Werewolf/files/: werewolf.cpp
IOI/2018/P4-Mechanical_Doll/files/: doll.cpp  doll.h
IOI/2018/P5-Highway_Tolls/: grader.cpp  highway.cpp  highway.h
IOI/2018/P5-Highway_Tolls/tests/: 01  03
IOI/2018/P6-Meetings/files/: meetings.cpp
IOI/2018/P6-Meetings/tests/: 01  02  03  04
IOI/2019/P1-Arranging_Shoes/files/: shoes.cpp
IOI/2019/P2-Split_the_Attractions/files/: grader.cpp  split.cpp
IOI/2019/P2-Split_the_Attractions/tests/: 03  04
IOI/2019/P4-Broken_Line/files/: line.cpp
IOI/2019/P4-Broken_Line/outputs/: 01.out  02.out  03.out  04.out  05.out  06.out  07.out  08.out  09.out  10.out
IOI/2019/P4-Broken_Line/tests/: 01
IOI/2019/P5-Vision_Program/files/: vision.cpp
IOI/2019/P5-Vision_Program/tests/: 01
IOI/2019/P6-Sky_Walking/files/: walk.cpp
IOI/2019/P6-Sky_Walking/tests/: 01  02  03  04  05  06
IOI/2020/P1-Comparing_Plants/files/: grader.cpp  plants.cpp
IOI/2020/P1-Comparing_Plants/tests/: 01
IOI/2020/P2-Connecting_Supertrees/files/: grader.cpp  supertrees.cpp
IOI/2020/P2-Connecting_Supertrees/tests/: 04  05
IOI/2020/P3-Carnival_Tickets/files/: grader.cpp  tickets.cpp
IOI/2020/P3-Carnival_Tickets/tests/: 03  04
IOI/2020/P4-Packing_Biscuits/files/: biscuits.cpp
IOI/2020/P4-Packing_Biscuits/tests/: 01  02
IOI/2020/P5-Counting_Mushrooms/files/: grader.cpp  mushrooms.cpp
IOI/2020/P5-Counting_Mushrooms/tests/: 01  02
IOI/2020/P6-Stations/files/: stations.cpp
IOI/2020/P6-Stations/tests/: 01  02
IOI/2023/P1-Closing-Time/files/: closing.cpp  closing.h  grader.cpp
IOI/2023/P1-Closing-Time/tests/: 02
IOI/2023/P2-Longest-Trip/files/: longesttrip.cpp  longesttrip.h
IOI/2023/P2-Longest-Trip/tests/: 01
IOI/2023/P5-Overtaking/files/: grader.cpp  overtaking.cpp
JOI/Final_Round/2018/: art.cpp  commuter_pass.cpp  stove.cpp
JOI/Final_Round/2019/: bitaro.cpp
JOI/Final_Round/2020/: just_long_neckties.cpp
JOI/Final_Round/2023/: stone.cpp
JOI/Open_Contest/2014/P6-Secret/files/: secret.cpp
JOI/Spring_Training_Camp/2018/Day-3/: bitaro.cpp
JOI/Spring_Training_Camp/2019/: examination.cpp
POI/2013/Round-2/kon/files/: kon.cpp
POI/2014/Round-2/: raj.cpp
POI/2019/Stage-1/: klu.cpp
USACO/2013/Open/Silver/: p1.cpp
USACO/2015/December/Gold/: p2.cpp
USACO/2016/February/Gold/: p2.cpp
USACO/2016/Open/Gold/: p3.cpp
USACO/2018/February/Gold/: p3.cpp
USACO/2022/December/Gold/: p3.cpp
USACO/2022/December/Silver/: p1.cpp  p2.cpp  p3.cpp
USACO/2023/January/Gold/: p3.cpp
WEOI/2024/A/: equal.cpp  grader.cpp
WEOI/2024/B/: grader.cpp  mazes.cpp
WEOI/2024/C/: grader.cpp  multihop.cpp
WEOI/2024/D/: grader.cpp  trees.cpp
